updated and finalized

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -11,7 +11,7 @@
     <br>
     <center><h3>What would you like to do today</h3></center>
 
-    <form action = "{{url_for('viewDB')}}" method = "post" >
+    <form action = "{{url_for('viewDB')}}" method = "get" >
         <br>
         <center> <button class="btn btn-primary"> View all Salary DB </button> </center>
     </form>
