--- a/Templates/poster.html
+++ b/Templates/poster.html
@@ -12,6 +12,7 @@
     <form action = "{{url_for('posted')}}" method = "post" >
         <br>
         <div class = "form-group">
+            <div class ="col-xs-4">
                 <br>
                 <b>Enter your job:</b>
                 <input class ="form-control" type = "text" name="poster job" placeholder="Your Job Title">
@@ -21,8 +22,15 @@
                 <br>
                 <b>Enter your maximum salary:</b>
                 <input class ="form-control" type="number" min="1" step="1" name="max salary" placeholder="1000000000" maxlength="10">
+                <br>
+                <br>
+                <center> <button class="btn btn-primary"> Post </button> </center>
+                <br>
+                <br>
+                <form action = "{{url_for('home')}}" method = "post" >
+                    <center> <button class="btn pull-right"> Back </button> </center>
+                </form>
+            </div>
         </div>
-    <br>
-    <center> <button class="btn btn-primary"> Post </button> </center>
-
+    </form>
 {% endblock %}
