--- a/Templates/viewdb_jtitles.html
+++ b/Templates/viewdb_jtitles.html
@@ -9,21 +9,30 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
     <center><h1><b>View Entire Salary Database</b></h1></center>
     <br>
     <br>
     <b>Select the role</b>
-    <form action = "{{url_for('home')}}" method = "post" >
+    <form action = "{{url_for('viewDB')}}" class="form" method = "post" >
         <div class = "form-group">
-            <select class="form-control form-control-sm" name="job_title" >
-                {% for result in results %}
-                    <option value="{{result.JOB_TITLE}}">{{result.JOB_TITLE}}</option>
-                {% endfor %}
-            </select>
+            <div class="col-xs-4">
+                <select class="form-control form-control-sm" name="job_title" >
+                    {% for result in results %}
+                        <option value="{{result.JOB_TITLE}}">{{result.JOB_TITLE}}</option>
+                    {% endfor %}
+                </select>
+                <br>
+                <input type="submit" class="btn btn-primary pull-right" value="Submit" >
+            </div>
         </div>
-        <div>
+    </form>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+         <div>
             {% for salary in salaries %}
                 <h1>Salary details of Job Title:{{salary.JOB_TITLE}}</h1>
                 <ul>
